--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "optimize-images": "node image-optimizer.cjs",
+    "build": "npm run optimize-images && tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -16,7 +17,8 @@
     "@mui/material": "^5.15.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "sharp": "^0.33.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
