--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "dotenv": "^16.4.5",
+    "firebase": "^10.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
     "sharp": "^0.33.3"
   },
