--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.17",
     "@mui/material": "^5.15.17",
+    "@mui/system": "^5.15.15",
     "dotenv": "^16.4.5",
     "firebase": "^10.12.0",
     "react": "^18.2.0",
